Update description of current development mode for 4.0

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -65,7 +65,7 @@ mission statement</a>.</p>
 </dt><dd>
   Branch status:
   <a href="http://gcc.gnu.org/ml/gcc/2004-11/msg00775.html">2004-11-22</a>
-  (release branch mode; fixes and regressions only).
+  (release branch mode; open for regressions fixes only).
 <!--
   (<a href="develop.html#stage3">Stage 3</a>; open for all maintainers).
 -->
