Added a C++ standard reference

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -365,7 +365,8 @@ and not your code, that is broken.</em></p>
 
 	
 	<li>In a template definition, unqualified names will no longer
-	find members of a dependent base. For example,
+	find members of a dependent base (as specified by [temp.dep]/3
+	in the C++ standard). For example,
 	<pre>
 	template &lt;typename T&gt; struct B {
 	  int m;
