--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -366,6 +366,10 @@ class N::A {
         VR4120 processors.  These workarounds are enabled by
         <code>-mfix-r4000</code>, <code>-mfix-r4400</code> and
         <code>-mfix-vr4120</code> respectively.</li>
+    <li>IRIX shared libraries are now installed into the standard
+        library directories: o32 libraries go into <code>lib/</code>,
+        n32 libraries go into <code>lib32/</code> and n64 libraries
+        go into <code>lib64/</code>.</li>
   </ul>
 
 <h3>S/390 and zSeries</h3>
