--- a/htdocs/projects/cfo.html
+++ b/htdocs/projects/cfo.html
@@ -40,7 +40,7 @@ nearly the opposite of function inlining.</li>
 </ul>
 
 <p>Both algorithms have an opportunity of working on two different levels 
-(Tree, RTL). Both have their own advatages, disadvatages.
+(Tree and RTL). Both have their own advantages and disadvantages.
 This project holds both types for future investigations. </p>
 
 <p>For more information about code factoring see the 
