--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -65,7 +65,7 @@ mission statement</a>.</p>
 </dt><dd>
   Branch status:
   <a href="http://gcc.gnu.org/ml/gcc/2005-01/msg00268.html">2005-01-05</a>
-  (<a href="develop.html#stage3">Stage 3</a>; open for all maintainers).
+  (<a href="develop.html#stage3">Stage 3</a>; open for bug fixes only).
 </dd>
 
 </dl>
