Added a note about -fnew-ra being discontinued.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -36,8 +36,10 @@
         old loop optimization code with respect to common Fortran constructs.
         The new (tree) loop optimizer works differently and doesn't need those
         work-arounds.</li>
+    <li>The graph-coloring register allocator, formerly enabled by the option
+	<code>-fnew-ra</code>, has been discontinued.</li>
     <li><code>-I-</code> has been deprecated.  <code>-iquote</code> is meant
-    to replace the need for this option.</li>
+        to replace the need for this option.</li>
     <li>The MIPS <code>-membedded-pic</code> and <code>-mrnames</code>
         options have been removed.</li>
     <li>All MIPS targets now require the GNU assembler.  In particular,
