Mention csl-3_4_3-linux-branch

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -394,6 +394,10 @@ be prefixed with the initials of the distributing organization.</p>
   <dt>csl-3_4-linux-branch</dt>
   <dd>CodeSourcery GNU/Linux compilers based on GCC 3.4.x.</dd>
 
+  <dt>csl-3_4_3-linux-branch</dt>
+  <dd>CodeSourcery GNU/Linux compilers based on GCC 3.4.3, with
+      patches from the csl-arm-branch.</dd>
+
 </dl>
 
 <h3><a name="olddevbranches">Inactive Development Branches</a></h3>
