--- a/htdocs/gcc-3.3/index.html
+++ b/htdocs/gcc-3.3/index.html
@@ -28,6 +28,14 @@ variety of targets and test packages.</p>
 <h2>Release History</h2>
 
 <dl>
+<dt>GCC 3.3.5</dt>
+<dd><a name="3.3.5">September 30, 2004</a>
+    <!-- (<a href="changes.html#3.3.3">changes</a>) -->
+</dd>
+<dt>GCC 3.3.4</dt>
+<dd><a name="3.3.4">May 31, 2004</a>
+    <!-- (<a href="changes.html#3.3.3">changes</a>) -->
+</dd>
 <dt>GCC 3.3.3</dt>
 <dd><a name="3.3.3">February 14, 2004</a>
     (<a href="changes.html#3.3.3">changes</a>)
