Document new IRIX FCSR setting.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -372,6 +372,14 @@ class N::A {
         library directories: o32 libraries go into <code>lib/</code>,
         n32 libraries go into <code>lib32/</code> and n64 libraries
         go into <code>lib64/</code>.</li>
+    <li>GCC-linked IRIX applications will now clear the MIPS IV
+        FCSR.FS (flush to zero) bit by default.  This may make the
+        applications run slower on MIPS IV systems than they would
+        do otherwise, but means that they will correctly handle
+        subnormal floating-point values on both MIPS III and MIPS IV
+        systems.  You can override this behavior by linking with either
+        <code>-ffast-math</code> or
+        <code>-funsafe-math-optimizations</code>.</li>
   </ul>
 
 <h3>S/390 and zSeries</h3>
