Add Obsolete Systems section and mention some SPARC targets.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -453,6 +453,23 @@ class N::A {
         systems, which NetWare never tried to support).</li>
   </ul>
 
+<h2><a name="obsolete_systems">Obsolete Systems</a></h2>
+
+  <p>Support for a number of older systems has been declared obsolete in
+  GCC 4.0.  Unless there is activity to revive them, the next release of
+  GCC will have their sources permanently <strong>removed</strong>.</p>
+
+  <p>These individual systems have been obsoleted:</p>
+
+  <ul>
+    <li>SPARC family
+      <ul>
+        <li>SPARClite-based systems (<code>sparclite-*-coff</code>,
+            <code>sparclite-*-elf</code>, <code>sparc86x-*-elf</code>)</li>
+        <li>OpenBSD 32-bit (<code>sparc-*-openbsd*</code>)</li>
+      </ul></li>
+  </ul>
+
 <h2>Documentation improvements</h2>
 
 <h2>Other significant improvements</h2>
