Note ISALPHA convention.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -156,6 +156,12 @@ or <code>gcc_unreachable</code>.  If the checks are expensive or the
 compiler can reasonably carry on after the error, they may be
 conditioned on <code>--enable-checking</code>.</p>
 
+<p>Code testing properties of characters from user source code should
+use macros such as <code>ISALPHA</code> from <code>safe-ctype.h</code>
+instead of the standard functions such as <code>isalpha</code> from
+<code>&lt;ctype.h&gt;</code> to avoid any locale-dependency of the
+language accepted.</p>
+
 <p>Code in GCC should use the following formatting conventions:</p>
 
 <table cellpadding="4">
