CRIS: has-free-simulator, (cris-elf) in /cvs/src

--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -71,7 +71,7 @@ arc      | ???   FI B      pf m d
 arm      |                      da  s
 avr      |    L  FI    l  c f m      
 c4x      |  ??  N I BD       g  d te 
-cris     |   S   F  B     cpf m  a   
+cris     |       F  B     cpf m  a  s
 fr30     | ??    FI B        gm   t s
 frv      | ??       B      p    da  s
 h8300    |       FI       cp g      s
