Fix errors copied over from the old page

--- a/htdocs/projects/optimize.html
+++ b/htdocs/projects/optimize.html
@@ -279,7 +279,7 @@ independent implementation.</p>
 target specific pages below.  An issue listed for one target may still
 also be an issue for other targets, but problems in the target specific
 pages are problems with, and ideas for the machine descriptions of some
-target.<p>
+target.</p>
 
 <ul>
 <li><a href="x86.html">Optimization deficiencies for ia32 and x86-64 based architectures</a></li>
@@ -289,7 +289,7 @@ target.<p>
 <p><strong>Note:</strong>If an issue listed in a target specific issues
 page, but it clearly is a target indepentent issue, please move it to
 a page discussing target indepentent issues</p>
-has gotten around to implementing it.<p>
 
 </body>
 </html>
+
