* wwwdocs/htdocs/projects/cfo.html: Fix for W3.

--- a/htdocs/projects/cfo.html
+++ b/htdocs/projects/cfo.html
@@ -56,24 +56,24 @@ C code example:<br />
 <pre>
 // Original source            // After local factoring
 {                             {
-                                I1;   // <= HOIST
+                                I1;   // &lt;= HOIST
   if ( cond )                   if ( cond )
   {                             {
     I0;                           I0;
-    I1;   // <= HOIST
-    I2;   // <= SINK
-    I3;   // <= SINK
+    I1;   // &lt;= HOIST
+    I2;   // &lt;= SINK
+    I3;   // &lt;= SINK
   }                             }
   else                          else
   {                             {
-    I1;   // <= HOIST
+    I1;   // &lt;= HOIST
     I4;                           I4;
     I5;                           I5;
-    I2;   // <= SINK
-    I3;   // <= SINK
+    I2;   // &lt;= SINK
+    I3;   // &lt;= SINK
   }                             }
-                                I2;   // <= SINK
-                                I3;   // <= SINK
+                                I2;   // &lt;= SINK
+                                I3;   // &lt;= SINK
 }                             }
 </pre>
 </li>
@@ -151,11 +151,11 @@ GCC Summit Proceedings (2004)</a>.</p>
 at the last merge (2004-11-16).</p>
 
 <table width="50%" border="1">
-<th>
-<!--  <td>&nbsp;</td> -->
-  <td align="center" colspan="2">Code size save</td>
-  <td align="center" colspan="2">Compilation time multiplier</td>
-</th>
+<tr>
+  <th>&nbsp;</th>
+  <th align="center" colspan="2">Code size save</th>
+  <th align="center" colspan="2">Compilation time multiplier</th>
+</tr>
 <tr>
   <td>Target</td>
   <td align="center">arm-elf</td>
