2005-02-02  Jonathan Wakely  <redi@gcc.gnu.org>
	* htdocs/index.html: Use absolute URL for wiki link so it works
	when pages are hosted anywhere other than gcc.gnu.org.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -84,7 +84,7 @@ mission statement</a>.</p>
 <dl>
 <dt><b>January 27, 2005</b></dt>
 <dd>
-GCC now has a <a href="wiki/">Wiki</a>.
+GCC now has a <a href="http://gcc.gnu.org/wiki/">Wiki</a>.
 </dd>
 
 <dt><b>November 4, 2004</b></dt>
