--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -89,7 +89,7 @@ We do not believe any data was lost in the CVS repository.  We did lose any
 pending messages in the mail queue as that does not get backed up.  At this
 time, everything should be functional except for htdig.  The mailing list
 archives on the web site are also out of date and will be updated soon.
-New mail will update the archvies correctly, however.  If you find any
+New mail will update the archives correctly, however.  If you find any
 other problems, please email
 <a href="mailto:overseers@sources.redhat.com">overseers@sources.redhat.com</a>
 </dd>
