change sources.redhat.com to gcc.gnu.org in overseers e-mail address

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -91,7 +91,7 @@ time, everything should be functional except for htdig.  The mailing list
 archives on the web site are also out of date and will be updated soon.
 New mail will update the archives correctly, however.  If you find any
 other problems, please email
-<a href="mailto:overseers@sources.redhat.com">overseers@sources.redhat.com</a>
+<a href="mailto:overseers@gcc.gnu.org">overseers@gcc.gnu.org</a>
 </dd>
 
 <dt><b>January 27, 2005</b></dt>
