--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -25,6 +25,7 @@ Key fingerprint = B215 C163 3BCA 0477 615F  1B35 A5B3 A004 745C 015A
 <li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/gcc/">mirror.aarnet.edu.au</a></li>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/gcc/">gd.tuwien.ac.at</a>, thanks to Antonin dot Sprinzl at tuwien dot ac dot at</li>
 <li>Brasil (releases only, no snapshots): <a href="ftp://ftp.softaplic.com.br/pub/sourceware/gcc/">ftp.softaplic.com.br</a></li>
+<li>China: <a href="ftp://linuxforum.net/ftp.gcc.gnu.org/">ftp://linuxforum.net/ftp.gcc.gnu.org/</a></li>, thanks to David Deng (david99deng at yahoo dot com)
 <li>Finland: <a href="ftp://ftp.funet.fi/pub/mirrors/gcc.gnu.org/pub/gcc/">ftp.funet.fi</a></li>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.lip6.fr/pub/gcc/">ftp.lip6.fr</a>, thanks to ftpmaint at lip6 dot fr</li>
 <li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/gcc.gnu.org/gcc/">ftp.irisa.fr</a>, thanks to ftpmaint at irisa dot fr</li>
