Adjust OpenMP URLs and avoid one "duplicate" link.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -234,7 +234,7 @@ particular releases or snapshots or the latest snapshot.  </p>
 
   <dt>gomp-branch</dt>
   <dd>This branch is used by the GOMP project to implement <a
-  href="http://www.openmp.org/">OpenMP</a> support in GCC.
+  href="http://www.openmp.org/drupal/">OpenMP</a> support in GCC.
   Patches and discussions regarding the design and implementation
   of GOMP should go to the main GCC development lists.  Messages
   should be marked with <code>[gomp]</code> in the subject line.
@@ -452,7 +452,7 @@ be prefixed with the initials of the distributing organization.</p>
   <dt>gomp-01-branch</dt>
   <dd>This branch was created to allow the
   <a href="http://savannah.nongnu.org/projects/gomp/">GOMP</a>
-  project to implement <a href="http://www.openmp.org/">OpenMP</a>
+  project to implement OpenMP
   support in GCC.  It has since been found that a new C parser is
   necessary before OpenMP support can be easily implemented.  Thus,
   the branch is currently unmaintained.</dd>
