--- a/htdocs/fortran/extensions.html
+++ b/htdocs/fortran/extensions.html
@@ -28,7 +28,7 @@ are desired extensions beyond the current standard.
   <li>Derived type I/O</li>
   <li>Asynchronous I/O</li>
   <li>Procedure variables</li>
-  <li><a href="http://www.openmp.org/">OpenMP</a> which provides
+  <li><a href="http://www.openmp.org/drupal/">OpenMP</a> which provides
   multi-platform shared-memory parallel programming</li>
   <li><a href="http://www.scd.ucar.edu/tcg/consweb/Fortran90/scnpoint.html">
 Cray pointers</a> </li>
