--- a/htdocs/projects/gomp/index.html
+++ b/htdocs/projects/gomp/index.html
@@ -8,7 +8,7 @@
 <h1>Welcome to the home of GOMP</h1>
 
 <p>The GOMP project is developing an implementation of
-<a href="http://www.openmp.org">OpenMP</a>
+<a href="http://www.openmp.org/drupal/">OpenMP</a>
 for the C, C++, and <a href="../../fortran">Fortran
 95</a> compilers in the <a href="../../">GNU
 Compiler Collection</a>. As part of the <a
