--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -932,8 +932,8 @@ template &lt;typename T&gt; struct B : A&lt;T&gt;
 </ul>
 
 <p>In addition to the problems listed above, the manual contains a section on
-<a href="http://gcc.gnu.org/onlinedocs/gcc/C---Misunderstandings.html">Common
-Misunderstandings with GNU C++</a>.</p>
+<a href="http://gcc.gnu.org/onlinedocs/gcc/C_002b_002b-Misunderstandings.html">
+Common Misunderstandings with GNU C++</a>.</p>
 
 </body>
 </html>
