* index.html: Adjust link to Linux Journal article on Eclipse.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -133,8 +133,8 @@ evidence</a>!
 </td><td>
 GCJ in the press! The July issue of Linux Journal
 features an article on building the Eclipse IDE to native code using GCJ:
-<a href="http://www.linuxjournal.com/article.php?sid=7413">
-Eclipse goes native</a>. The July issue of Doctor Dobbs Journal also 
+<a href="http://www.linuxjournal.com/article/7413">Eclipse
+goes native</a>. The July issue of Doctor Dobbs Journal also 
 features an article (not available online) on GCJ and the Compiled Native 
 Interface (<a href="../onlinedocs/gcj/About-CNI.html">CNI</a>).
 </td></tr>
