Fix dead links in tree-ssa project page.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -62,26 +62,6 @@ based on the Static Single Assignment (SSA) form [<a
 href="#cytron.ea-91">1</a>].  The implementation currently lives in the
 <code>tree-ssa-20020619-branch</code> branch.</p>
 
-<ul>
-<li><a href="http://people.redhat.com/dnovillo/pub/tree-ssa/snapshot/">Daily
-snapshots</a> of the branch are available.  These snapshots are known to
-bootstrap on <code>i686-pc-linux-gnu</code>.</li>
-
-<li>The branch is tested daily on several GNU/Linux platforms, including
-Alpha, x86, IA64, AMD64, PowerPC and PowerPC64.  Regression test results
-are posted to the <a
-href="http://gcc.gnu.org/ml/gcc-testresults/">gcc-testresults</a> mailing
-list.  <a
-href="http://people.redhat.com/dnovillo/pub/tree-ssa/nightly-testing/">Full
-build logs</a> are also available.</li>
-
-<li>Daily performance results are available for <a
-href="http://people.redhat.com/dnovillo/spec95/tree-ssa-branch/">SPEC
-CPU95</a> and <a
-href="http://people.redhat.com/dnovillo/spec2000/tree-ssa-branch/">SPEC
-CPU2000</a>.</li>
-</ul>
-
 <hr />
 <h3><a name="documentation">Documentation</a></h3>
 
@@ -175,8 +155,7 @@ intermediate representation based on GENERIC. The IR, called GIMPLE, is a
 very simple C-like three-address language that looks pretty straightforward
 to analyze and keeps all the high-level attributes of data types.  GIMPLE
 is derived from the SIMPLE representation proposed by the McCAT project out
-of <a href="http://www-acaps.cs.mcgill.ca/info/McCAT/McCAT.html">McGill
-University</a> [<a href="#hendren.ea-92">2</a>].</p>
+of McGill University</a> [<a href="#hendren.ea-92">2</a>].</p>
 
 <p>The data structures are the same trees used by GCC, but we impose
 rules on how the trees can be combined.  For instance, the
