Fix invalid html in previous commit.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -155,7 +155,7 @@ intermediate representation based on GENERIC. The IR, called GIMPLE, is a
 very simple C-like three-address language that looks pretty straightforward
 to analyze and keeps all the high-level attributes of data types.  GIMPLE
 is derived from the SIMPLE representation proposed by the McCAT project out
-of McGill University</a> [<a href="#hendren.ea-92">2</a>].</p>
+of McGill University [<a href="#hendren.ea-92">2</a>].</p>
 
 <p>The data structures are the same trees used by GCC, but we impose
 rules on how the trees can be combined.  For instance, the
