Updated for re-branching of java-gui-branch

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -354,7 +354,7 @@ floating point</a> page on the <a
   &lt;<a href="mailto:neroden@gcc.gnu.org">neroden@gcc.gnu.org</a>&gt;
   is maintaining this branch.</dd>
 
-  <dt>java-gui-branch</dt>
+  <dt>java-gui-20050128-branch</dt>
   <dd>This is a temporary branch for development of java GUI libraries
   (AWT and Swing) in the libjava directory.</dd>
 
@@ -462,6 +462,11 @@ be prefixed with the initials of the distributing organization.</p>
   nest optimizer at the tree level.  Was largely merged into mainline,
   and is currently unmaintained.
   This work now continues on the autovect-branch.</dd>
+
+  <dt>java-gui-branch</dt>
+  <dd>This was a temporary branch for development of java GUI libraries
+  (AWT and Swing) in the libjava directory.  It has been superseded
+  by java-gui-20050128-branch</dd>
 
 </dl>
 
