--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -141,7 +141,8 @@ names.
   </li>
  
  <li>m32r
-  <br />Manufacturer: Mitsubishi
+  <br />Manufacturer: Renesas
+  <br /><a href="http://www.renesas.com/fmwk.jsp?cnt=m32r_family_landing.jsp&fp=/products/mpumcu/m32r_family/">Renesas M32R Site</a>
   <br />GDB includes a CGEN generated simulator.
  </li>
  
