Mention libgcj XML changes

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -275,9 +275,11 @@ class N::A {
 	  <code>javax.imageio.spi</code>,
 	  <code>javax.print</code>,
 	  <code>javax.print.attribute</code>,
-	  <code>javax.print.attribute.standard</code>, and
-	  <code>javax.print.event</code>
+	  <code>javax.print.attribute.standard</code>,
+	  <code>javax.print.event</code>, and
+	  <code>javax.xml</code>
 	</li>
+	<li> Updated SAX and DOM, and imported GNU JAXP </li>
       </ul>
     </li>
 
