* projects.html: Adjust Mozilla URL.

--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -1,4 +1,4 @@
-<html>
+#<html>
 <head>
 <title>The GCJ Projects List</title>
 </head>
@@ -44,7 +44,7 @@ Plugin for Mozilla
 <br />
 
 <p>
-<a href="http://mozilla.org/">Mozilla</a> is open-source web browser,
+<a href="http://www.mozilla.org/">Mozilla</a> is open-source web browser,
 designed for standards compliance, performance and portability.  The
 <a href="http://www.mozilla.org/oji/">Open JVM Integration project</a>
 (OJI) is a Mozilla sub-project, and is working to extend the browser
