--- a/htdocs/projects/documentation.html
+++ b/htdocs/projects/documentation.html
@@ -235,7 +235,7 @@ in the manual</a></h2>
 necessary by asking people who were involved in GCC development when
 those bugs were documented.  If a bug is no longer present, remove it
 from the list; if it is still present, file a bug report in the <a
-href="http://gcc.gnu.org/bugzilla">GCC bug tracking system</a> or
+href="http://gcc.gnu.org/bugzilla/">GCC bug tracking system</a> or
 fix the bug yourself.</p>
 
 </body>
