* readings.html: Update pa links.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -197,13 +197,14 @@ names.
   <br /><a href="http://www.national.com/pf/NS/NS32FX200.html">NS32FX200 Home Page</a>
  </li>
  
- <li>pa (hppa1.0, hppa1.1, hppa2.0)
+ <li>pa
   <br />Manufacturer: HP
-  <br /><a href="http://www.cpus.hp.com/technical_references/parisc.shtml">PA-RISC</a>
+  <br /><a href="http://h21007.www2.hp.com/dspp/tech/tech_TechByTypePage_IDX/1,4690,40106-0,00.html">PA-RISC</a>
   is preferred over the older HPPA acronym
   (Hewlett-Packard Precision Architecture).
+  <br /><a href="http://parisc-linux.org/documentation/index.html">http://parisc-linux.org/documentation/index.html</a>
+  is another good source of PA-RISC documention.
  </li>
-  
 
  <li>pdp11
   <br />Manufacturer: DEC
