--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -419,7 +419,7 @@ mentioned above is available from these sources:</p>
 </li>
 
 <li>SPEC SDET (proprietary benchmark):
-    <a href="http://www.specbench.org/osg/sdm91/#sdet">
+    <a href="http://www.spec.org/osg/sdm91/#sdet">
     description at specbench web site</a>;
     <a href="http://www.citi.umich.edu/projects/linux-scalability/reports/spec.html">
     description at citi web site</a>
