Fix two links to /onlinedocs which were broken by the new naming scheme in texinfo 4.6.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -693,7 +693,7 @@ and not your code, that is broken.</em></p>
            the <code>-fobjc-exceptions</code> switch; as of this writing,
            they may only be used in conjunction with <code>-fnext-runtime
            </code> on Mac OS X 10.3 and later. See <a href=
-           "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
+           "http://gcc.gnu.org/onlinedocs/gcc/Objective_002dC-and-Objective_002dC_002b_002b-Dialect-Options.html"
            >Options Controlling Objective-C Dialect</a> for more
            information.</li>
        <li>An overhaul of <code>@encode</code> logic.  The C99 <code>_Bool
@@ -762,10 +762,9 @@ and not your code, that is broken.</em></p>
 <h3>Alpha</h3>
   <ul>
     <li>Several
-    <a href="http://gcc.gnu.org/onlinedocs/gcc/Alpha-Built-in-Functions.html#Alpha%20Built-in%20Functions">
-    built-in functions</a> have been added such as
-    <code>__builtin_alpha_zap</code> to allow utilizing the more
-    obscure instructions of the CPU.</li>
+    <a href="http://gcc.gnu.org/onlinedocs/gcc/Alpha-Built_002din-Functions.html">built-in
+    functions</a> have been added such as <code>__builtin_alpha_zap</code> to
+    allow utilizing the more obscure instructions of the CPU.</li>
 
     <li>Parameter passing of complex arguments has changed to match the
     <a href="http://h30097.www3.hp.com/docs/base_doc/DOCUMENTATION/V51A_HTML/ARH9MBTE/DTMNPLTN.HTM#normal-argument-list-structure">
