Describe project submission process

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -108,7 +108,17 @@ stage will be two months in length.</p>
 <h4><a name="stage1">Stage 1</a></h4>
 
 <p>During this period, changes of any nature may be made to the
-compiler.  In particular, major changes may be merged from branches.</p>
+compiler.  In particular, major changes may be merged from branches.
+In order to avoid chaos, the Release Manager will ask for a list of
+major projects proposed for the coming release cycle before the start
+of Stage 1.  The Release Manager will attempt to sequence the projects
+in such a way as to cause minimal disruption.  The Release Manager
+will not reject projects that will be ready for inclusion before the
+end of Stage 1.  Similarly, the Release Manager has no special power
+to accept a particular patch or branch beyond what his or her status
+as a maintainer affords.  The Release Manager's role during Stage 1 is
+merely to attempt to order the inclusion of major features in an
+organized manner.</p>
 
 <h4><a name="stage2">Stage 2</a></h4>
 
