Add strawberry.resnet.mtu.edu mirror.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -51,6 +51,7 @@ Key fingerprint = B215 C163 3BCA 0477 615F  1B35 A5B3 A004 745C 015A
 <li>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/GNU/CYGNUS/gcc/">ftp1.sinica.edu.tw</a></li>
 <li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a>, thanks to ftpadm at ftp dot nctu dot edu dot tw</li>
 <li>UK: <a href="ftp://ftp.mirrorservice.org/sites/sources.redhat.com/pub/gcc/">ftp://ftp.mirrorservice.org/sites/sources.redhat.com/pub/gcc/</a>, thanks to mirror at mirrorservice dot org</li>
+<li>US (Houghton, Michigan): <a href="http://strawberry.resnet.mtu.edu/pub/gcc/">strawberry.resnet.mtu.edu</a>, Michigan Technological University, thanks to  Paul Schou (pbschou at mtu dot edu)</li>
 <li>US (Virginia): <a href="ftp://mirrors.rcn.net/pub/sourceware/gcc/">mirrors.rcn.net</a> (also available via <a href="http://mirrors.rcn.net/pub/sourceware/gcc/">http</a>)</li>
 <li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/gcc.gnu.org/pub/gcc/">mirrors.laffeycomputer.com</a>, thanks to mirrormaster at laffey dot biz</li>
 </ul>
