--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -277,7 +277,7 @@ and not your code, that is broken.</em></p>
         (*(a, &amp;b)) = 2;
         </pre></li>
     <li>Several
-	<a href="http://gcc.gnu.org/onlinedocs/gcc/Other-Builtins.html#Other%20Builtins">
+	<a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.3/gcc/Other-Builtins.html#Other%20Builtins">
 	built-in functions</a> such as <code>__builtin_popcount</code>
 	for counting bits, finding the highest and lowest bit in a
 	word, and parity have been added.</li>
@@ -693,7 +693,7 @@ and not your code, that is broken.</em></p>
            the <code>-fobjc-exceptions</code> switch; as of this writing,
            they may only be used in conjunction with <code>-fnext-runtime
            </code> on Mac OS X 10.3 and later. See <a href=
-           "http://gcc.gnu.org/onlinedocs/gcc/Objective_002dC-and-Objective_002dC_002b_002b-Dialect-Options.html"
+           "http://gcc.gnu.org/onlinedocs/gcc-3.4.3/gcc/Objective_002dC-Dialect-Options.html"
            >Options Controlling Objective-C Dialect</a> for more
            information.</li>
        <li>An overhaul of <code>@encode</code> logic.  The C99 <code>_Bool
@@ -706,14 +706,14 @@ and not your code, that is broken.</em></p>
        <li>Support for "Zero-Link" (<code>-fzero-link</code>) and
            "Fix-and-Continue" (<code>-freplace-objc-classes</code>) debugging
            modes, currently available on Mac OS X 10.3 and later. See <a href=
-           "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
+           "http://gcc.gnu.org/onlinedocs/gcc-3.4.3/gcc/Objective_002dC-Dialect-Options.html"
            >Options Controlling Objective-C Dialect</a> for more
            information.</li>
        <li>Access to optimized runtime entry points (<code>-fno-nil-receivers
            </code>) on the assumption that message receivers are never <code>
            nil</code>.  This is currently available on Mac OS X 10.3 and
            later. See <a href=
-           "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
+           "http://gcc.gnu.org/onlinedocs/gcc-3.4.3/gcc/Objective_002dC-Dialect-Options.html"
            >Options Controlling Objective-C Dialect</a> for more
            information.</li>
     </ul></li>
@@ -753,7 +753,7 @@ and not your code, that is broken.</em></p>
 
   <ul>
     <li>Fortran improvements are listed in the
-    <a href="http://gcc.gnu.org/onlinedocs/g77/News.html">
+    <a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.3/g77/News.html">
     Fortran documentation</a>.</li>
   </ul>
 
@@ -762,7 +762,7 @@ and not your code, that is broken.</em></p>
 <h3>Alpha</h3>
   <ul>
     <li>Several
-    <a href="http://gcc.gnu.org/onlinedocs/gcc/Alpha-Built_002din-Functions.html">built-in
+    <a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.3/gcc/Alpha-Built_002din-Functions.html">built-in
     functions</a> have been added such as <code>__builtin_alpha_zap</code> to
     allow utilizing the more obscure instructions of the CPU.</li>
 
@@ -792,10 +792,10 @@ and not your code, that is broken.</em></p>
 
     <li>The existing ARM pipeline description has been converted to
     the use the <a
-    href="http://gcc.gnu.org/onlinedocs/gccint/Processor-pipeline-description.html">DFA
+    href="http://gcc.gnu.org/onlinedocs/gcc-3.4.3/gccint/Processor-pipeline-description.html">DFA
     processor pipeline model</a>. There is not much change in code
     performance, but the description is now <a
-    href="http://gcc.gnu.org/onlinedocs/gccint/Comparison-of-the-two-descriptions.html">easier
+    href="http://gcc.gnu.org/onlinedocs/gcc-3.4.3/gccint/Comparison-of-the-two-descriptions.html">easier
     to understand</a>.</li>
 
     <li>Support for the Cirrus EP9312 Maverick floating point
@@ -852,7 +852,7 @@ and not your code, that is broken.</em></p>
         <code>-mtune=itanium1</code> should be used.</li>
 
     <li><a
-        href="http://gcc.gnu.org/onlinedocs/gccint/Processor-pipeline-description.html">DFA
+        href="http://gcc.gnu.org/onlinedocs/gcc-3.4.3/gccint/Processor-pipeline-description.html">DFA
         processor pipeline descriptions</a> for the IA-64 processors
         have been added.  This resulted in about 3% improvement on the
         SPECInt2000 benchmark for Itanium 2.</li>
