--- a/htdocs/bugs/reghunt.html
+++ b/htdocs/bugs/reghunt.html
@@ -272,7 +272,8 @@ space as the full repository.</p>
 maintains an <a href="http://www.devphil.com/~reghunt/">automated regression
 search engine</a> which can help narrow down the range of dates in certain
 cases.  The main development branch can be searched back to pre-3.0 days,
-and other branches are available with less history.
+and other branches are available with less history.  (Note:  this web
+server is not always running.)
 </p>
 
 <h2><a name="problems">Work around problems</a></h2>
