--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -23,7 +23,8 @@ the test suite directories.</p>
   <li>Phil Edwards runs a build and regression tester referred to as
       the <a href="http://www.devphil.com/build/">Autocrasher</a>, which
       tries to nag people via email when they break things.  It pays
-      special attention to C++ binary compatibility.</li>
+      special attention to C++ binary compatibility.  (Note:  this web
+      server is not always running.)</li>
 
   <li>Several people perform regular builds and regression test runs and
       send their test results to the
