* index.html: Added news items.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -83,6 +83,22 @@ and <code>javax.security.cert</code> support), we recommend
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>February 15, 2005</b>
+</td><td>
+Thomas Fitzsimmons has checked in an implementation of libjawt, the
+AWT Native interface.  Among other things, this enables the JOGL
+(OpenGL for Java) bindings to work.
+</td></tr>
+
+<tr><td valign="top">
+<b>February 1, 2005</b>
+</td><td>
+We've merged GNU JAXP into the core.  This includes many classes
+in <code>javax.xml</code>, plus updated versions
+of <code>org.xml.sax</code> and <code>org.w3c.dom</code>.
+</td></tr>
+
+<tr><td valign="top">
 <b>November 25, 2004</b>
 </td><td>
 John David Anglin checked in <a
