Replace three DWARF-related links by new DWARF Workgroup site.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -560,12 +560,7 @@ names.
 
   <li><a href="http://www.superh.com/documentation/documents.php?id=17">Download page for SH4 and SH5 ABI</a></li>
 
-  <li><a href="http://www.eagercon.com/dwarf/dwarf3std.htm">DWARF 3
-  drafts (formerly DWARF 2.1)</a></li>
-
-  <li><a href="ftp://ftp.sgi.com/sgi/dwarf/">DWARF v2 spec and sample implementation</a></li>
-
-  <li><a href="http://www.opengroup.org/infosrv/plsig/">DWARF 1.1 and 2.06 specs</a></li>
+  <li><a href="http://dwarf.freestandards.org/">DWARF Workgroup</a></li>
 
   <li><a href="ftp://ftp.sgi.com/sgi/dev/davea/objectinfo.html">Debugging/object info</a> by David B.Anderson (including links to some DWARF tools)</li>
 
