* index.html: Make link to /onlinedocs need to refer to gcc.gnu.org.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -152,7 +152,7 @@ features an article on building the Eclipse IDE to native code using GCJ:
 <a href="http://www.linuxjournal.com/article/7413">Eclipse
 goes native</a>. The July issue of Doctor Dobbs Journal also 
 features an article (not available online) on GCJ and the Compiled Native 
-Interface (<a href="../onlinedocs/gcj/About-CNI.html">CNI</a>).
+Interface (<a href="http://gcc.gnu.org/onlinedocs/gcj/About-CNI.html">CNI</a>).
 </td></tr>
 
 <tr><td valign="top">
