--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -116,6 +116,7 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 <ul>
   <li>gcc_ss_<i>yyyymmdd</i></li>
+  <li>gcc-4_0-branch</li>
   <li>gcc_3_4_3_release</li>
   <li>gcc_3_4_2_release</li>
   <li>gcc_3_4_1_release</li>
