--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -60,12 +60,16 @@ mission statement</a>.</p>
 </dd>
 -->
 
-<dt><strong>Active development (mainline):</strong>
+<dt><strong>Next release series:</strong>
   will become GCC 4.0.0 (<a href="gcc-4.0/changes.html">current changes</a>)
 </dt><dd>
-  Branch status:
-  <a href="http://gcc.gnu.org/ml/gcc/2005-02/msg00079.html">2005-02-03</a>
-  (<a href="develop.html#stage3">Stage 3</a>; open for bug fixes only).
+  Branch status: open for regression fixes only.
+</dd>
+
+<dt><strong>Active development (mainline):</strong>
+  will become GCC 4.1.0 (<a href="gcc-4.1/changes.html">current changes</a>)
+</dt><dd>
+  Branch status: frozen.
 </dd>
 
 </dl>
