2005-02-25  Toon Moene  <toon@moene.indiv.nluug.nl>
	* index.html: List gfortran patch reviewers and their rules.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -55,6 +55,42 @@ We provide read access to our development sources for everybody with
 <a href="../cvs.html">anonymous CVS</a>. If you do not have CVS access (for
 instance because you are behind a firewall prohibiting the CVS protocol),
 you might want to download <a href="../snapshots.html">snapshots</a>.</p>
+<p>Contributions will be reviewed by the following people:</p>
+<ul>
+<li>Paul Brook</li>
+<li>Steven Bosscher</li>
+<li>Toon Moene</li>
+<li>Tobias Schlueter</li>
+<li>Bud Davis</li>
+<li>Janne Blomqvist</li>
+<li>Steve Kargl</li>
+</ul>
+<p>under the rules specified below:</p>
+<ul>
+<li>Paul Brook and Steven Bosscher can unilaterally commit patches they
+deem reasonable, as they have set up the gfortran tree in GCC.</li>
+<li>All <a href="../contribute.html">normal requirements</a> for patch
+submission (assignment of copyright to the FSF, testing, changelog entries,
+etc) still apply, and reviewers should ensure that these have been met
+before approving changes.</li>
+<li>Approval should be necessary for patches which don't fall under the
+obvious rule, so with this list put in place everybody (except maintainers)
+should <strong>still</strong> seek approval for his/her patches.</li>
+<li>Patches should only be reviewed by people who know the affected parts
+of the compiler.  I.e. the reviewer has to be sure he/she knows stuff well
+enough to make a good judgement.</li>
+<li>Large/complicated patches should still go by one of our maintainers.</li>
+<li>We are all reasonable people, and nobody is working under employer
+pressure or needs an ego-boost badly, so in general we assume that noone
+deliberately does anything stupid :-)</li>
+</ul>
+<p>The directories involved are:</p>
+<ol>
+<li>gcc/gcc/fortran/</li>
+<li>gcc/gcc/testsuite/gfortran.dg/</li>
+<li>gcc/gcc/testsuite/gfortran.fortran-torture/</li>
+<li>gcc/libgfortran/</li>
+</ol>
 
 <h2>Binaries</h2>
 <p>The GNU project is about providing source code for its programs.
