Mention arrays of incomplete type.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -124,6 +124,12 @@
     <li>Taking the address of a variable with <code>register</code>
         storage is invalid in C.  GCC now issues an error instead of a
         warning.</li>
+    <li>Arrays of incomplete element type are invalid in C.  GCC now
+        issues an error for such arrays.  Declarations such as
+        <code>extern struct s x[];</code> (where <code>struct s</code>
+        has not been defined) can be moved after the definition of
+        <code>struct s</code>.  Function parameters declared as
+        arrays of incomplete type can instead be declared as pointers.</li>
   </ul>
 
 <h3>C++</h3>
