Mention new C parser.

--- a/htdocs/gcc-4.1/changes.html
+++ b/htdocs/gcc-4.1/changes.html
@@ -17,6 +17,13 @@
 
 <h2>New Languages and Language specific improvements</h2>
 
+<h3>C and Objective-C</h3>
+
+  <ul>
+    <li>The old Bison-based C and Objective-C parser has been replaced
+	by a new, faster hand-written recursive-descent parser.</li>
+  </ul>
+
 <h2>New Targets and Target Specific Improvements</h2>
 
 <h2><a name="obsolete_systems">Obsolete Systems</a></h2>
