--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -93,6 +93,10 @@
 
         Many of these passes outperform their counterparts from previous
         GCC releases.
+    </li><br />
+    <li><a href="../news/sms.html">Swing Modulo Scheduling (SMS).</a>
+	An RTL level instruction scheduling optimization intended for
+	loops that perform heavy computations.
     </li>
   </ul>
 
