--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -69,7 +69,8 @@ mission statement</a>.</p>
 <dt><strong>Active development (mainline):</strong>
   will become GCC 4.1.0 (<a href="gcc-4.1/changes.html">current changes</a>)
 </dt><dd>
-  Branch status: frozen.
+  Branch status: <a href="develop.html#stage1">Stage 1</a>; open for
+  all maintainers.
 </dd>
 
 </dl>
