Mention the GCC-4.0 branch date.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -335,7 +335,7 @@ stages of development, branch points, and releases:</p>
        |                                   GCC 3.4.3 release (Nov 4 2004)
        |
        +-- GCC 4.0 branch --------------+
-       |                                 \
+       |            (Feb 25 2005)        \ 
        |                                  v
        |                                   GCC 4.0.0 release (early 2005,
        |                                                      TENTATIVELY)
