Fix broken link (mirrored the page in the Wiki)

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -500,10 +500,10 @@ class N::A {
 	planning) complete avoidance of symbol clashes when manually loading
 	shared objects with RTLD_GLOBAL, thus finally solving problems many
 	projects such as python were forced to use RTLD_LOCAL for (with its
-	resulting issues for C++ correctness). You can find more information about
-	using these options at <a
-	href="http://www.nedprod.com/programs/gccvisibility.html">
-	http://www.nedprod.com/programs/gccvisibility.html</a></li>
+	resulting issues for C++ correctness). You can find more information 
+	about using these options at <a
+	href="http://gcc.gnu.org/wiki/Visibility">
+	http://gcc.gnu.org/wiki/Visibility</a>.</li>
   </ul>
 
 </body>
