--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -376,14 +376,19 @@ class N::A {
         paired-single instructions.  Full SB-1 support can be selected with
         <code>-march=sb1</code> while code for any ISA can be optimized
         for the SB-1 using <code>-mtune=sb1</code>.</li>
-    <li>The compiler can now work around errata in R4000, R4400 and
-        VR4120 processors.  These workarounds are enabled by
-        <code>-mfix-r4000</code>, <code>-mfix-r4400</code> and
-        <code>-mfix-vr4120</code> respectively.</li>
+    <li>The compiler can now work around errata in R4000, R4400,
+        VR4120 and VR4130 processors.  These workarounds are enabled by
+        <code>-mfix-r4000</code>, <code>-mfix-r4400</code>,
+        <code>-mfix-vr4120</code> and <code>-mfix-vr4130</code>
+        respectively.  The VR4120 and VR4130 workarounds need binutils
+        2.16 or above.</li>
     <li>IRIX shared libraries are now installed into the standard
         library directories: o32 libraries go into <code>lib/</code>,
         n32 libraries go into <code>lib32/</code> and n64 libraries
         go into <code>lib64/</code>.</li>
+    <li>The compiler supports a new <code>-msym32</code> option.
+        It can be used to optimize n64 code in which all symbols
+        are known to have 32-bit values.</li>
   </ul>
 
 <h3>S/390 and zSeries</h3>
